--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iky Store</title>
+    <title>yusuf store</title>
     <style>
         /* Body & Background */
         body {
@@ -112,8 +112,8 @@
 <!-- Header -->
 <header>
     <div class="header-content">
-        <img src="https://files.catbox.moe/x00w7t.jpg" alt="Logo Website">
-        <div>Produk Iky Store</div>
+        <img src="https://tmpfiles.org/dl/10226849/tmp.jpg" alt="Logo Website">
+        <div>Produk yusuf stote</div>
     </div>
 </header>
 
@@ -121,52 +121,52 @@
 <div class="container">
     <div class="product-list">
         <div class="product">
-            <img src="https://files.catbox.moe/vs7p53.jpg" alt="Produk A">
+            <img src="https://tmpfiles.org/dl/10226231/tmp.jpg" alt="Produk A">
+            <div class="product-content">
+                <h2>Uang Grow A Garden 150T</h2>
+                <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
+                <div class="price">Rp 1.000</div>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20250T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="https://tmpfiles.org/dl/10226231/tmp.jpg" alt="Produk B">
             <div class="product-content">
                 <h2>Uang Grow A Garden 250T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
-                <div class="price">Rp 1.000</div>
-                <a href="https://wa.me/6283139882434?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20250T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
-            </div>
-        </div>
-
-        <div class="product">
-            <img src="https://files.catbox.moe/vs7p53.jpg" alt="Produk B">
-            <div class="product-content">
-                <h2>Uang Grow A Garden 500T</h2>
-                <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 2.000</div>
-                <a href="https://wa.me/6283139882434?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20500T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20500T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
-            <img src="https://files.catbox.moe/vs7p53.jpg" alt="Produk C">
+            <img src="https://tmpfiles.org/dl/10226231/tmp.jpg" alt="Produk C">
             <div class="product-content">
-                <h2>Uang Grow A Garden 750T</h2>
+                <h2>Uang Grow A Garden 350T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 3.000</div>
-                <a href="https://wa.me/6283139882434?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20750T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20750T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
-            <img src="https://files.catbox.moe/vs7p53.jpg" alt="Produk D">
+            <img src="https://tmpfiles.org/dl/10226231/tmp.jpg" alt="Produk D">
             <div class="product-content">
-                <h2>Uang Grow A Garden 1,5Q</h2>
+                <h2>Uang Grow A Garden 450T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 4.000</div>
-                <a href="https://wa.me/6283139882434?text=Permisi%2C%20saya%20ingin%20membeli%20uang%201,5Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%201,5Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
-            <img src="https://files.catbox.moe/vs7p53.jpg" alt="Produk E">
+            <img src="https://tmpfiles.org/dl/10226231/tmp.jpg" alt="Produk E">
             <div class="product-content">
-                <h2>Uang Grow A Garden 2Q</h2>
+                <h2>Uang Grow A Garden 650T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 5.000</div>
-                <a href="https://wa.me/6283139882434?text=Permisi%2C%20saya%20ingin%20membeli%20uang%202Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%202Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
     </div>
@@ -181,3 +181,4 @@
 
 </body>
 </html>
+
