--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yusuf store</title>
+    <title>luxyyofc</title>
     <style>
         /* Body & Background */
         body {
@@ -113,7 +113,7 @@
 <header>
     <div class="header-content">
         <img src="https://files.catbox.moe/ambbny.jpg" alt="Logo Website">
-        <div>Produk yusuf stote</div>
+        <div>Produk luxyyofc</div>
     </div>
 </header>
 
@@ -181,5 +181,6 @@
 
 </body>
 </html>
+
 
 
