--- a/index.html
+++ b/index.html
@@ -123,50 +123,50 @@
         <div class="product">
             <img src="https://files.catbox.moe/vd1pon.jpg" alt="Produk A">
             <div class="product-content">
-                <h2>Uang Grow A Garden 150T</h2>
+                <h2>Uang Grow A Garden 250T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 1.000</div>
-                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20150T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20250T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
             <img src="https://files.catbox.moe/vd1pon.jpg" alt="Produk B">
             <div class="product-content">
-                <h2>Uang Grow A Garden 250T</h2>
+                <h2>Uang Grow A Garden 500T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 2.000</div>
-                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20250T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20500T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
             <img src="https://files.catbox.moe/vd1pon.jpg" alt="Produk C">
             <div class="product-content">
-                <h2>Uang Grow A Garden 350T</h2>
+                <h2>Uang Grow A Garden 700T</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 3.000</div>
-                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20350T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20700T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
             <img src="https://files.catbox.moe/vd1pon.jpg" alt="Produk D">
             <div class="product-content">
-                <h2>Uang Grow A Garden 450T</h2>
+                <h2>Uang Grow A Garden 1Q</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 4.000</div>
-                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20450T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%201Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
 
         <div class="product">
             <img src="https://files.catbox.moe/vd1pon.jpg" alt="Produk E">
             <div class="product-content">
-                <h2>Uang Grow A Garden 650T</h2>
+                <h2>Uang Grow A Garden 2Q</h2>
                 <p>Jika uang kalian grow a garden sangat sedikit dan produk ini sangat membantu untuk menambahkan uang kalian untuk event/update</p>
                 <div class="price">Rp 5.000</div>
-                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%20650T%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
+                <a href="https://wa.me/6287826231623?text=Permisi%2C%20saya%20ingin%20membeli%20uang%202Q%20apakah%20masih%20ada%20untuk%20produknya" class="btn-whatsapp">Beli Sekarang</a>
             </div>
         </div>
     </div>
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
